2006-01-16  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS: 
	* configure.in: 2.13.5

2006-01-02  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in:
	* NEWS: 2.13.4

2005-12-12  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.13.3

2005-11-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2005-11-13  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS:
	* configure.in: 2.13.2

2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2005-10-25  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* README: Reorganise the --enable-games code so that order in the
	list matters and the pseudo-game "none" can be used.

2005-10-24  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS: 
	* configure.in: 2.13.1

	* Makefile.am:
	* configure.in:
	* gnome-stones/*: GNOME Stones has been removed because of doubts
	about the copyright status of various components and a general
	lack of maintenance.

2005-10-12  Callum McKenzie  <callum@spooky-possum.org>

	* README:
	* Makefile.am: 
	* configure.in:
	* aisleriot/Makefile.am:
	* blackjack/Makefile.am:
	* gnometris/Makefile.am: Add support for --enable-games and
	--disable--games to selectively build games.

2005-09-30  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* */Makefile.am: Rearrange the link order to keep Cygwin/MinGW
	happy. Patch from yselkowitz@users.sourceforge.net (bug #317561).

2005-09-29  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in (scoredir): Add the build-breaker and
	mega-build-breaker to enable extremely anti-social compiler
	options during testing. Also fix up the -DNO_ESD flags.

2005-09-23  Callum McKenzie  <callum@spooky-possum.org>

	* gnome-games.spec: Update using Paul Smith's known-good version
	as a base.

2005-09-09  Callum McKenzie  <callum@spooky-possum.org>
