@@ -6,7 +6,7 @@ Exec=sol --variation freecell
 Icon=gnome-cardgame.png
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;CardGame;
+Categories=GNOME;GTK;Game;CardGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=aisleriot
