@@ -6,7 +6,7 @@ _Comment=Compete to dominate the board in a Reversi-like game
 Exec=gataxx
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;BoardGame;
+Categories=GNOME;GTK;Game;BoardGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=gataxx
