@@ -6,7 +6,7 @@ _Comment=Compete to make lines of the same color
 Exec=gnect
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;PuzzleGame;
+Categories=GNOME;GTK;Game;LogicGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=gnect
