@@ -6,7 +6,7 @@ Exec=gnibbles
 Icon=gnome-nibbles.png
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;ArcadeGame;
+Categories=GNOME;GTK;Game;ArcadeGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=gnibbles
