@@ -6,7 +6,7 @@ Icon=gnome-gtetris.png
 Exec=gnometris
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;BlocksGame;
+Categories=GNOME;GTK;Game;BlocksGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=gnometris
