@@ -6,7 +6,7 @@ Exec=gnotski
 Icon=gnotski-icon.png
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;PuzzleGame;
+Categories=GNOME;GTK;Game;LogicGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=gnotski
