@@ -6,7 +6,7 @@ Exec=gtali
 Icon=gnome-gtali.png
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;
+Categories=GNOME;GTK;Game;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=gtali
