@@ -1,5 +1,4 @@
-/* Generated by GOB (v2.0.11) on Mon Jan 16 18:57:42 2006
-   (do not edit directly) */
+/* Generated by GOB (v2.0.14)   (do not edit directly) */
 
 /* End world hunger, donate to the World Food Programme, http://www.wfp.org */
 
@@ -13,10 +12,10 @@
  */
 
 
-#line 17 "games-scores-dialog.c"
+#line 16 "games-scores-dialog.c"
 #define GOB_VERSION_MAJOR 2
 #define GOB_VERSION_MINOR 0
-#define GOB_VERSION_PATCHLEVEL 11
+#define GOB_VERSION_PATCHLEVEL 14
 
 #define selfp (self->_priv)
 
@@ -39,7 +38,7 @@
 #include <glib/gi18n.h>
 #include <gtk/gtk.h>
 
-#line 43 "games-scores-dialog.c"
+#line 42 "games-scores-dialog.c"
 
 #line 53 "games-scores-dialog.gob"
 
@@ -50,7 +49,7 @@
 
 #include <math.h>
 
-#line 54 "games-scores-dialog.c"
+#line 53 "games-scores-dialog.c"
 /* self casting macros */
 #define SELF(x) GAMES_SCORES_DIALOG(x)
 #define SELF_CONST(x) GAMES_SCORES_DIALOG_CONST(x)
@@ -152,13 +151,13 @@ ___finalize(GObject *obj_self)
 		(* G_OBJECT_CLASS(parent_class)->finalize)(obj_self);
 #line 76 "games-scores-dialog.gob"
 	if(self->_priv->scores) { g_object_unref ((gpointer) self->_priv->scores); self->_priv->scores = NULL; }
-#line 156 "games-scores-dialog.c"
+#line 155 "games-scores-dialog.c"
 #line 77 "games-scores-dialog.gob"
 	if(self->_priv->categories) { g_hash_table_destroy ((gpointer) self->_priv->categories); self->_priv->categories = NULL; }
-#line 159 "games-scores-dialog.c"
+#line 158 "games-scores-dialog.c"
 #line 78 "games-scores-dialog.gob"
 	if(self->_priv->catindices) { g_hash_table_destroy ((gpointer) self->_priv->catindices); self->_priv->catindices = NULL; }
-#line 162 "games-scores-dialog.c"
+#line 161 "games-scores-dialog.c"
 }
 #undef __GOB_FUNCTION__
 
@@ -178,10 +177,10 @@ games_scores_dialog_class_init (GamesScoresDialogClass * c G_GNUC_UNUSED)
 #line 253 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
-#line 182 "games-scores-dialog.c"
+#line 181 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::init"
-	self->_priv = G_TYPE_INSTANCE_GET_PRIVATE(self,TYPE_SELF,GamesScoresDialogPrivate);
+	self->_priv = G_TYPE_INSTANCE_GET_PRIVATE(self,GAMES_TYPE_SCORES_DIALOG,GamesScoresDialogPrivate);
  {
 #line 253 "games-scores-dialog.gob"
 
@@ -289,7 +288,7 @@ games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
     gtk_widget_hide (self->_priv->hdiv);
     gtk_widget_hide (self->_priv->message);
   
-#line 293 "games-scores-dialog.c"
+#line 292 "games-scores-dialog.c"
  }
 }
 #undef __GOB_FUNCTION__
@@ -298,7 +297,7 @@ games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
 #line 87 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_load_categories (GamesScoresCategory * cat, GamesScoresDialog * self)
-#line 302 "games-scores-dialog.c"
+#line 301 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::load_categories"
 {
@@ -309,7 +308,7 @@ games_scores_dialog_load_categories (GamesScoresCategory * cat, GamesScoresDialo
      * in different contexts.) */
     games_scores_dialog_add_category (self, cat->key, Q_(cat->name));
   }}
-#line 313 "games-scores-dialog.c"
+#line 312 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -326,7 +325,7 @@ games_scores_dialog_load_categories (GamesScoresCategory * cat, GamesScoresDialo
 #line 106 "games-scores-dialog.gob"
 GtkWidget * 
 games_scores_dialog_new (GamesScores * scores, const gchar * title)
-#line 330 "games-scores-dialog.c"
+#line 329 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::new"
 {
@@ -349,13 +348,13 @@ games_scores_dialog_new (GamesScores * scores, const gchar * title)
 
     return (GtkWidget *)dialog;
   }}
-#line 353 "games-scores-dialog.c"
+#line 352 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 125 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_name_edited (GtkCellRendererText * cell, gchar * path, gchar * new_text, GamesScoresDialog * self)
-#line 359 "games-scores-dialog.c"
+#line 358 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::name_edited"
 {
@@ -369,13 +368,13 @@ games_scores_dialog_name_edited (GtkCellRendererText * cell, gchar * path, gchar
 
     games_scores_update_score (self->_priv->scores, new_text);
   }}
-#line 373 "games-scores-dialog.c"
+#line 372 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 139 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_cursor_changed (GtkTreeView * treeview, GamesScoresDialog * self)
-#line 379 "games-scores-dialog.c"
+#line 378 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::cursor_changed"
 {
@@ -383,13 +382,13 @@ games_scores_dialog_cursor_changed (GtkTreeView * treeview, GamesScoresDialog * 
 	
     g_object_set (self->_priv->namerenderer, "editable", FALSE, NULL);
   }}
-#line 387 "games-scores-dialog.c"
+#line 386 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 145 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_set_hilight_private (GamesScoresDialog * self)
-#line 393 "games-scores-dialog.c"
+#line 392 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_hilight_private"
 {
@@ -406,24 +405,24 @@ games_scores_dialog_set_hilight_private (GamesScoresDialog * self)
     /* Temporarily disable the code that prevents editing when the
      * cursor changes position. */
     g_signal_handler_block (self->_priv->treeview, 
-			    self->_priv->cursor_handler_id);
-    g_object_set (self->_priv->namerenderer, "editable", TRUE, NULL);
+			    self->_priv->cursor_handler_id); 
     selection = gtk_tree_view_get_selection (self->_priv->treeview);
     path = gtk_tree_path_new_from_indices (self->_priv->hilight - 1, -1);
     gtk_tree_selection_select_path (selection, path);
     gtk_tree_view_set_cursor (self->_priv->treeview, path, 
 			      self->_priv->namecolumn, TRUE);
+    g_object_set (self->_priv->namerenderer, "editable", TRUE, NULL);
     g_signal_handler_unblock (self->_priv->treeview, 
-			      self->_priv->cursor_handler_id);
+			      self->_priv->cursor_handler_id); 
     g_free (path);
   }}
-#line 421 "games-scores-dialog.c"
+#line 420 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 170 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_redraw (GamesScoresDialog * self)
-#line 427 "games-scores-dialog.c"
+#line 426 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::redraw"
 {
@@ -464,13 +463,13 @@ games_scores_dialog_redraw (GamesScoresDialog * self)
       
     games_scores_dialog_set_hilight_private (self);
   }}
-#line 468 "games-scores-dialog.c"
+#line 467 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 208 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_change_category (GtkComboBox * widget, GamesScoresDialog * self)
-#line 474 "games-scores-dialog.c"
+#line 473 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::change_category"
 {
@@ -499,13 +498,13 @@ games_scores_dialog_change_category (GtkComboBox * widget, GamesScoresDialog * s
 
     g_free (catcopy);
   }}
-#line 503 "games-scores-dialog.c"
+#line 502 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 238 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_show (GamesScoresDialog * self)
-#line 509 "games-scores-dialog.c"
+#line 508 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::show"
 {
@@ -517,13 +516,13 @@ games_scores_dialog_show (GamesScoresDialog * self)
     games_scores_dialog_set_category (self, cat);
     games_scores_dialog_redraw (self);
   }}
-#line 521 "games-scores-dialog.c"
+#line 520 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 247 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_hide (GamesScoresDialog * self)
-#line 527 "games-scores-dialog.c"
+#line 526 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::hide"
 {
@@ -532,7 +531,7 @@ games_scores_dialog_hide (GamesScoresDialog * self)
     self->_priv->hilight = 0;
     gtk_tree_selection_unselect_all (gtk_tree_view_get_selection (self->_priv->treeview));
   }}
-#line 536 "games-scores-dialog.c"
+#line 535 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 
@@ -549,7 +548,7 @@ games_scores_dialog_hide (GamesScoresDialog * self)
 #line 369 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, const gchar * name)
-#line 553 "games-scores-dialog.c"
+#line 552 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::add_category"
 {
@@ -567,7 +566,7 @@ games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, c
     self->_priv->catcounter++;
     gtk_combo_box_append_text (GTK_COMBO_BOX (self->_priv->combo), name);
   }}
-#line 571 "games-scores-dialog.c"
+#line 570 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -581,7 +580,7 @@ games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, c
 #line 393 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_set_category (GamesScoresDialog * self, const gchar * key)
-#line 585 "games-scores-dialog.c"
+#line 584 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_category"
 {
@@ -594,7 +593,7 @@ games_scores_dialog_set_category (GamesScoresDialog * self, const gchar * key)
     self->_priv->preservehilight = TRUE;
     gtk_combo_box_set_active (GTK_COMBO_BOX (self->_priv->combo), idx);
   }}
-#line 598 "games-scores-dialog.c"
+#line 597 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -611,7 +610,7 @@ games_scores_dialog_set_category (GamesScoresDialog * self, const gchar * key)
 #line 413 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoreStyle style)
-#line 615 "games-scores-dialog.c"
+#line 614 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_style"
 {
@@ -633,7 +632,7 @@ games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoreStyle style)
 
     gtk_tree_view_column_set_title (self->_priv->column, header);
   }}
-#line 637 "games-scores-dialog.c"
+#line 636 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -649,7 +648,7 @@ games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoreStyle style)
 #line 440 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_category_description (GamesScoresDialog * self, const gchar * description)
-#line 653 "games-scores-dialog.c"
+#line 652 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_category_description"
 {
@@ -662,13 +661,13 @@ games_scores_dialog_set_category_description (GamesScoresDialog * self, const gc
     gtk_label_set_use_markup (GTK_LABEL (self->_priv->label), TRUE);
     g_free(lstr);
   }}
-#line 666 "games-scores-dialog.c"
+#line 665 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 460 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_hilight (GamesScoresDialog * self, guint pos)
-#line 672 "games-scores-dialog.c"
+#line 671 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_hilight"
 {
@@ -680,7 +679,7 @@ games_scores_dialog_set_hilight (GamesScoresDialog * self, guint pos)
     self->_priv->hilight = pos;
     games_scores_dialog_set_hilight_private (self);
   }}
-#line 684 "games-scores-dialog.c"
+#line 683 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -694,7 +693,7 @@ games_scores_dialog_set_hilight (GamesScoresDialog * self, guint pos)
 #line 477 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message)
-#line 698 "games-scores-dialog.c"
+#line 697 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_message"
 {
@@ -709,7 +708,7 @@ games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message
       gtk_label_set_label (GTK_LABEL (self->_priv->message), message);
     }
   }}
-#line 713 "games-scores-dialog.c"
+#line 712 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -723,7 +722,7 @@ games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message
 #line 496 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_buttons (GamesScoresDialog * self, guint buttons)
-#line 727 "games-scores-dialog.c"
+#line 726 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_buttons"
 {
@@ -766,5 +765,5 @@ games_scores_dialog_set_buttons (GamesScoresDialog * self, guint buttons)
 	       			         GTK_RESPONSE_CLOSE);
     }
   }}
-#line 770 "games-scores-dialog.c"
+#line 769 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
