@@ -155,7 +155,7 @@ class Games:Scores:Dialog from Gtk:Dialog {
     /* Temporarily disable the code that prevents editing when the
      * cursor changes position. */
     g_signal_handler_block (self->_priv->treeview, 
-			    self->_priv->cursor_handler_id);
+			    self->_priv->cursor_handler_id); 
     g_object_set (self->_priv->namerenderer, "editable", TRUE, NULL);
     selection = gtk_tree_view_get_selection (self->_priv->treeview);
     path = gtk_tree_path_new_from_indices (self->_priv->hilight - 1, -1);
@@ -163,7 +163,7 @@ class Games:Scores:Dialog from Gtk:Dialog {
     gtk_tree_view_set_cursor (self->_priv->treeview, path, 
 			      self->_priv->namecolumn, TRUE);
     g_signal_handler_unblock (self->_priv->treeview, 
-			      self->_priv->cursor_handler_id);
+			      self->_priv->cursor_handler_id); 
     g_free (path);
   }
 
