@@ -6,7 +6,7 @@ Exec=mahjongg
 Icon=gnome-mahjongg.png
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Game;BoardGame;
+Categories=GNOME;GTK;Game;BoardGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
 X-GNOME-Bugzilla-Component=mahjongg
