@@ -1,3 +1,9 @@
+2006-01-24  Callum McKenzie  <callum@spooky-possum.org>
+
+	* */*.desktop.in: Add GTK to the category list, remove
+	the non-standard Application category, replace PuzzleGame with
+	LogicGame.
+
 2006-01-16  Callum McKenzie  <callum@spooky-possum.org>
 
 	* NEWS: 
